--- a/movieRecommender.html
+++ b/movieRecommender.html
@@ -136,6 +136,6 @@
             </p>
         </div>
 
-        <script>src="movieRecommender.js"</script>
+        <script src="movieRecommender.js"></script>
     </body>
 </html>
